# server/main/kotlin/ch/yass/game/api/JoinGameResponse.kt
@@ -3,6 +3,7 @@ package ch.yass.game.api
 import ch.yass.game.dto.CardOnTable
 import ch.yass.game.dto.PlayerAtTable
 import ch.yass.game.dto.SeatState
+import ch.yass.game.pubsub.GameFinished
 import java.util.*
 
 data class JoinGameResponse(
@@ -10,5 +11,6 @@ data class JoinGameResponse(
     val code: String,
     val seat: SeatState,
     val cardsPlayed: List<CardOnTable>,
-    val otherPlayers: List<PlayerAtTable>
+    val otherPlayers: List<PlayerAtTable>,
+    val finished: GameFinished?
 )
